--- a/css/styles.css
+++ b/css/styles.css
@@ -697,6 +697,7 @@ footer {
 
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0.5);
+  opacity: 0;
 }
 
 
@@ -713,8 +714,10 @@ footer {
   background-color: #fff;
 
   transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
 
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-btn {
